--- a/CocShop.Service/CocShop.Service.csproj
+++ b/CocShop.Service/CocShop.Service.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CocShop.Core\CocShop.Core.csproj" />
+    <ProjectReference Include="..\CocShop.Data\CocShop.Data.csproj" />
     <ProjectReference Include="..\CocShop.Model\CocShop.Model.csproj" />
   </ItemGroup>
 
