--- a/CocShopProject/appsettings.json
+++ b/CocShopProject/appsettings.json
@@ -7,5 +7,10 @@
   "ConnectionStrings": {
     "DbConnection": "data source=THIENNBSE63207\\SQLEXPRESS;Database=CocShop;user id=sa;password=080297"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CorsSettings": {
+    "AllowOrigin": "*",
+    "AllowMethod": "*",
+    "AllowHeader": "*"
+  }
 }
