--- a/CocShop.Service/CocShop.Service.csproj
+++ b/CocShop.Service/CocShop.Service.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CocShop.Core\CocShop.Core.csproj" />
     <ProjectReference Include="..\CocShop.Data\CocShop.Data.csproj" />
   </ItemGroup>
 
