--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 ## ignore appsetting 
-appsettings.json
-appsettings.Development.json
+**/appsettings.json
+**/appsettings.Development.json
 # User-specific files
 *.rsuser
 *.suo
