--- a/CocShopProject/appsettings.json
+++ b/CocShopProject/appsettings.json
@@ -5,7 +5,10 @@
     }
   },
   "ConnectionStrings": {
-    "DbConnection": "Server=tcp:luona.database.windows.net,1433;Initial Catalog=CocShop;Persist Security Info=False;User ID=thienmanhvo;Password=Thienprovip0802;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //server
+    W"DbConnection": "Server=tcp:luona.database.windows.net,1433;Initial Catalog=CocShop;Persist Security Info=False;User ID=thienmanhvo;Password=Thienprovip0802;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //local
+    //"DbConnection": "Server=THIENNBSE63207\\SQLEXPRESS;Database=CocShop;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*",
   "CorsSettings": {
