--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,13 @@
     azureSubscription: 'connection'
     appType: 'webAppLinux'
     WebAppName: 
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'azureStudentStarter'
+    appType: 'webApp'
+    WebAppName: 'CocShopWebAPi20190925023900'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
     packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
     RuntimeStack: 'DOTNETCORE|2.2'
 # Build and test ASP.NET Core projects targeting .NET Core.
