--- a/CocShopProject/appsettings.json
+++ b/CocShopProject/appsettings.json
@@ -3,7 +3,8 @@
     "LogLevel": {
       "Default": "Warning"
     },
-    "LogFilePath": "logs/log.{Date}.txt"
+    "LogFilePath": "logs/log.{Date}.txt",
+    "QueryLogFilePath": "querylogs/querylog.{Date}.txt"
   },
   "ConnectionStrings": {
     //server
