--- a/CocShopProject/CocShop.WebAPi.csproj
+++ b/CocShopProject/CocShop.WebAPi.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <AssemblyVersion>0.0.0.1</AssemblyVersion>
+    <FileVersion>0.0.0.1</FileVersion>
+    <Version>0.0.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
