--- a/CocShopProject/appsettings.json
+++ b/CocShopProject/appsettings.json
@@ -8,9 +8,9 @@
   },
   "ConnectionStrings": {
     //server
-    //"DbConnection": "Server=tcp:luona.database.windows.net,1433;Initial Catalog=CocShop;Persist Security Info=False;User ID=thienmanhvo;Password=Thienprovip0802;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
+    "DbConnection": "Server=tcp:luona.database.windows.net,1433;Initial Catalog=CocShop;Persist Security Info=False;User ID=thienmanhvo;Password=Thienprovip0802;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
     //local
-    "DbConnection": "Server=THIENNBSE63207\\SQLEXPRESS;Database=CocShop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DbConnection": "Server=THIENNBSE63207\\SQLEXPRESS;Database=CocShop;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*",
   "CorsSettings": {
