--- a/CocShopProject/appsettings.json
+++ b/CocShopProject/appsettings.json
@@ -8,12 +8,12 @@
   },
   "ConnectionStrings": {
     //server new
-    //"DbConnection": "Server=tcp:luonainlove.database.windows.net,1433;Initial Catalog=CocShopDB;Persist Security Info=False;User ID=thienmanhvo;Password=Thienprovip0802;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DbConnection": "Server=tcp:luonainlove.database.windows.net,1433;Initial Catalog=CocShopDB;Persist Security Info=False;User ID=thienmanhvo;Password=Thienprovip0802;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     //"DbConnection": "Server=tcp:maiyeuhan.database.windows.net,1433;Initial Catalog=CocShop;Persist Security Info=False;User ID=thienmanhvo;Password=Thienprovip0802;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     //server
     //"DbConnection": "Server=tcp:luona.database.windows.net,1433;Initial Catalog=CocShop;Persist Security Info=False;User ID=thienmanhvo;Password=Thienprovip0802;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
     //local
-    "DbConnection": "Server=THIENNBSE63207\\SQLEXPRESS;Database=CocShop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DbConnection": "Server=THIENNBSE63207\\SQLEXPRESS;Database=CocShop;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*",
   "CorsSettings": {
